--- a/Client/src/app/components/list-empleados/list-empleados.component.html
+++ b/Client/src/app/components/list-empleados/list-empleados.component.html
@@ -1,1 +1,65 @@
-<p>listado de empleados works!</p>
+<div class="container mat-elevation-z3">
+    @if(empleadosList) {
+        <mat-form-field>
+            <mat-label>Filtro:</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. nombre, apellido" #input>
+        </mat-form-field>
+
+        <table mat-table [dataSource]="empleadosList">
+
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+    
+            <!-- Position Column -->
+            <ng-container matColumnDef="Id">
+                <th mat-header-cell *matHeaderCellDef> Cod. </th>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            </ng-container>
+            <!-- Position Column -->
+            <ng-container matColumnDef="DNI">
+                <th mat-header-cell *matHeaderCellDef> Doc. No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
+            </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Nombre">
+              <th mat-header-cell *matHeaderCellDef> Nombre </th>
+              <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+            </ng-container>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="Apellido">
+              <th mat-header-cell *matHeaderCellDef> Apellido </th>
+              <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+            </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="Direccion">
+              <th mat-header-cell *matHeaderCellDef> Dirección </th>
+              <td mat-cell *matCellDef="let element"> {{element.direccion}} </td>
+            </ng-container>
+            <!-- Weight Column -->
+            <ng-container matColumnDef="Cargo_Id">
+                <th mat-header-cell *matHeaderCellDef> Cargo </th>
+                <td mat-cell *matCellDef="let element"> {{element.cargo_Id}} </td>
+            </ng-container>
+            <ng-container matColumnDef="SueldoHora_Default">
+            <th mat-header-cell *matHeaderCellDef> Sueldo Hora </th>
+            <td mat-cell *matCellDef="let element"> {{element.sueldoHora_Default}} </td>
+            </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="Activo">
+            <th mat-header-cell *matHeaderCellDef> Activo </th>
+            <td mat-cell *matCellDef="let element"> {{element.activo}} </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    }
+    @else {
+        <h3>No hay datos para mostrar</h3>
+    }
+</div>  
+  
